--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "js-md5": "^0.7.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-items-carousel": "^2.3.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
